<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/image_curso"
        android:src="@drawable/curso1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/nome1"
        android:textSize="15sp"
        android:id="@+id/text_curso_nome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/local3"
        android:textSize="15sp"
        android:id="@+id/text_curso_local"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="2"
        android:gravity="start|center_vertical"
        android:text="@string/data"
        android:textSize="15sp"
        android:id="@+id/text_curso_dataA"/>

    </LinearLayout>


